k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devsecops-app
  namespace: devsecops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devsecops-app
  template:
    metadata:
      labels:
        app: devsecops-app
    spec:
      containers:
        - name: app
          image: ghcr.io/roma-rgb-tech/devsecops-pipeline-demo:6303f9644a18edd5844ad65499e1400355798b16
          ports:
            - containerPort: 8000
