k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: devsecops-app
  namespace: devsecops
spec:
  selector:
    app: devsecops-app
  ports:
    - port: 80
      targetPort: 8000
