k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devsecops-ingress
  namespace: devsecops
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: devsecops-demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devsecops-app
                port:
                  number: 80
